Update mod id to dwm

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.dwm.sonic_third_doctor": "Sonic Screwdriver",
+  "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver",
   "dwm.subtitle.sonic_sound": "Whirring"
 }
