Add fifth doctor sonic screwdriver

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.dwm.sonic_second_doctor": "Sonic Screwdriver",
   "item.dwm.sonic_third_doctor": "Sonic Screwdriver",
   "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver",
+  "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver",
   "dwm.subtitle.sonic_sound": "Whirring"
 }
