--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-  "item.dwm.sonic_second_doctor": "Sonic Screwdriver",
-  "item.dwm.sonic_third_doctor": "Sonic Screwdriver",
-  "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver",
-  "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver",
+  "item.dwm.sonic_second_doctor": "Sonic Screwdriver (Second Doctor)",
+  "item.dwm.sonic_third_doctor": "Sonic Screwdriver (Third Doctor)",
+  "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver (Fourth Doctor)",
+  "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
   "dwm.subtitle.sonic_sound": "Whirring"
 }
