Setup config screen with analytics toggle for all and anonymous

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -3,5 +3,9 @@
   "item.dwm.sonic_third_doctor": "Sonic Screwdriver (Third Doctor)",
   "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver (Fourth Doctor)",
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
-  "dwm.subtitle.sonic_sound": "Whirring"
+  "dwm.subtitle.sonic_sound": "Whirring",
+  "config.dwm.title": "Doctor Who Mod",
+  "config.dwm.category.general": "General",
+  "config.dwm.option.analytics": "Send analytics",
+  "config.dwm.option.analytics.anonymous": "Send anonymous analytics"
 }
