Track sonic screwdriver stats

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver (Fourth Doctor)",
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
   "dwm.subtitle.sonic_sound": "Whirring",
-  "config.dwm.title": "Doctor Who Mod"
+  "config.dwm.title": "Doctor Who Mod",
+  "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver"
 }
