--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.dwm.sonic_third_doctor": "Sonic Screwdriver (Third Doctor)",
   "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver (Fourth Doctor)",
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
+  "item.dwm.white_roundel_a": "White Roundel A",
   "dwm.subtitle.sonic_sound": "Whirring",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
