DWM-64: Add White Roundel B, Refactor analytics delivery for client

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.dwm.sonic_fourth_doctor": "Sonic Screwdriver (Fourth Doctor)",
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
   "item.dwm.white_roundel_a": "White Roundel A",
+  "item.dwm.white_roundel_b": "White Roundel B",
   "dwm.subtitle.sonic_sound": "Whirring",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
