--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
   "item.dwm.white_roundel_a": "White Roundel A",
   "item.dwm.white_roundel_b": "White Roundel B",
+  "item.dwm.white_big_roundel_a": "White Big Roundel A",
+  "item.dwm.white_big_roundel_b": "White Big Roundel B",
   "dwm.subtitle.sonic_sound": "Whirring",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
