--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.dwm.white_roundel_b": "White Roundel B",
   "item.dwm.white_big_roundel_a": "White Big Roundel A",
   "item.dwm.white_big_roundel_b": "White Big Roundel B",
+  "item.dwm.white_extruded_roundel_a": "White Extruded Roundel A",
+  "item.dwm.white_extruded_roundel_b": "White Extruded Roundel B",
   "dwm.subtitle.sonic_sound": "Whirring",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
