Add Teal Big Roundels

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.dwm.white_roundel_b": "White Roundel B",
   "item.dwm.white_big_roundel_a": "White Big Roundel A",
   "item.dwm.white_big_roundel_b": "White Big Roundel B",
+  "item.dwm.teal_big_roundel_a": "Teal Big Roundel A",
+  "item.dwm.teal_big_roundel_b": "Teal Big Roundel B",
   "item.dwm.white_extruded_roundel_a": "White Extruded Roundel A",
   "item.dwm.white_extruded_roundel_b": "White Extruded Roundel B",
   "item.dwm.white_tardis_wall": "White TARDIS Wall",
