Add Teal Roundels

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.dwm.sonic_fifth_doctor": "Sonic Screwdriver (Fifth Doctor)",
   "item.dwm.white_roundel_a": "White Roundel A",
   "item.dwm.white_roundel_b": "White Roundel B",
+  "item.dwm.teal_roundel_a": "Teal Roundel A",
+  "item.dwm.teal_roundel_b": "Teal Roundel B",
   "item.dwm.white_big_roundel_a": "White Big Roundel A",
   "item.dwm.white_big_roundel_b": "White Big Roundel B",
   "item.dwm.teal_big_roundel_a": "Teal Big Roundel A",
