DWM-32: Add Dark Tardis Wall & Roundels

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -7,14 +7,19 @@
   "item.dwm.white_roundel_b": "White Roundel B",
   "item.dwm.teal_roundel_a": "Teal Roundel A",
   "item.dwm.teal_roundel_b": "Teal Roundel B",
+  "item.dwm.dark_roundel_a": "Dark Roundel A",
+  "item.dwm.dark_roundel_b": "Dark Roundel B",
   "item.dwm.white_big_roundel_a": "White Big Roundel A",
   "item.dwm.white_big_roundel_b": "White Big Roundel B",
   "item.dwm.teal_big_roundel_a": "Teal Big Roundel A",
   "item.dwm.teal_big_roundel_b": "Teal Big Roundel B",
+  "item.dwm.dark_big_roundel_a": "Dark Big Roundel A",
+  "item.dwm.dark_big_roundel_b": "Dark Big Roundel B",
   "item.dwm.white_extruded_roundel_a": "White Extruded Roundel A",
   "item.dwm.white_extruded_roundel_b": "White Extruded Roundel B",
   "item.dwm.white_tardis_wall": "White TARDIS Wall",
   "item.dwm.teal_tardis_wall": "Teal TARDIS Wall",
+  "item.dwm.dark_tardis_wall": "Dark TARDIS Wall",
   "dwm.subtitle.sonic_sound": "Whirring",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
