Add localizations for TT Capsule and TARDIS Door sounds

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -105,7 +105,10 @@
   "item.dwm.gray_big_roundel_b": "Gray Big Roundel B",
   "item.dwm.purple_big_roundel_b": "Purple Big Roundel B",
   "item.dwm.teal_big_roundel_b": "Teal Big Roundel B",
+  "item.dwm.tt_capsule": "TT Capsule",
   "dwm.sonic_screwdriver.subtitle": "Whirring",
+  "dwm.tardis_door_close.subtitle": "TARDIS Door Closing",
+  "dwm.tardis_door_open.subtitle": "TARDIS Door Opening",
   "config.dwm.title": "Doctor Who Mod",
   "stat.dwm.sonic_screwdriver_use": "Uses of Sonic Screwdriver",
   "advancements.dwm.sonic_screwdriver": "Sonic Screwdriver",
