--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -114,5 +114,6 @@
   "advancements.dwm.sonic_screwdriver": "Sonic Screwdriver",
   "advancements.dwm.sonic_screwdriver.description": "Obtain a Sonic Screwdriver",
   "dwm.tt_capsule": "TT Capsule",
+  "dwm.first_doctor_box": "First Doctor Box",
   "dwm.gui.no_more_variants": "No more variants"
 }
