--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -115,5 +115,7 @@
   "advancements.dwm.sonic_screwdriver.description": "Obtain a Sonic Screwdriver",
   "dwm.tt_capsule": "TT Capsule",
   "dwm.first_doctor_box": "First Doctor Box",
-  "dwm.gui.no_more_variants": "No more variants"
+  "dwm.gui.no_more_variants": "No more variants",
+  "dwm.config.option.chameleon_gui": "Enable Chameleon GUI",
+  "dwm.config.category.experimental": "Experimental"
 }
