DWM-48: Add Seventh Doctor Box

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -120,6 +120,7 @@
   "dwm.fourth_doctor_box": "Fourth Doctor Box",
   "dwm.fifth_doctor_box": "Fifth Doctor Box",
   "dwm.sixth_doctor_box": "Sixth Doctor Box",
+  "dwm.seventh_doctor_box": "Seventh Doctor Box",
   "dwm.gui.no_more_variants": "No more variants",
   "dwm.config.option.chameleon_gui": "Enable Chameleon GUI",
   "dwm.config.category.experimental": "Experimental"
