Add the TARDIS Door Button block

--- a/src/main/resources/assets/dwm/lang/en_us.json
+++ b/src/main/resources/assets/dwm/lang/en_us.json
@@ -106,6 +106,7 @@
   "item.dwm.purple_big_roundel_b": "Purple Big Roundel B",
   "item.dwm.teal_big_roundel_b": "Teal Big Roundel B",
   "item.dwm.tardis_block": "TARDIS",
+  "item.dwm.tardis_door_button": "TARDIS Door Button",
   "dwm.sonic_screwdriver.subtitle": "Whirring",
   "dwm.tardis_door_close.subtitle": "TARDIS Door Closing",
   "dwm.tardis_door_open.subtitle": "TARDIS Door Opening",
